Sat Feb  6 00:02:31 2010  Tanaka Akira  <akr@fsij.org>

	* random.c (fill_random_seed): don't use O_NOFOLLOW because
	  /dev/urandom is a symlink in OpenSolaris.

	* lib/securerandom.rb (SecureRandom.random_bytes): ditto.

Fri Feb  5 23:09:01 2010  Akinori MUSHA  <knu@iDaemons.org>

	* ext/rational/rational.c: Added to provide a fast implementation
	  of Fixnum#gcd (and maybe some others in the future) in C.  The
	  base code was submitted by Kurt Stephens. [Feature #2561]

	* ext/rational/lib/rational.rb: Moved from lib/rational.rb.  Make
	  overall code optimization; submitted by Kurt Stephens.
	  [Feature #2561]

	* test/rational/test_rational.rb, test/rational/test_rational2.rb:
	  Add tests for Rational, ported from trunk.

	* test/rational/test_fixnum_gcd.rb: Add a test for Integer#gcd.
	  Case values are only provided for i386 and amd64 at the moment;
	  submitted by Kurt Stephens. [Feature #2561]

Wed Feb  3 21:14:59 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/net/http.rb (Net::HTTP#request): close @socket only after
	  started.  [ruby-core:28028]

Mon Feb  1 16:43:09 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (proc_invoke): reverted r25975.  [ruby-dev:39931]
	  [ruby-dev:40059]

	* eval.c (rb_mod_define_method): return original block but not
	  bound block.  [ruby-core:26984]

Mon Feb  1 07:36:33 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/tkutil/tkutil.c: fix SEGV on TkUtil::CallbackSubst._setup_subst_table.

	* ext/tk/lib/tk.rb: [POTENTIAL INCOMPATIBLE] return NoMethodError
	  for TkWindow#to_ary and to_str.

	* ext/tk/lib/tkextlib/tcllib/plotchart.rb: wrong arguments.

	* ext/tk/sampel/tkballoonhelp.rb: fail to support TkEntry widgets.

Wed Jan 27 14:25:12 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (thread_init): used only for setitimer or threaded.

	* ext/dl/dl.c (c_parray): get rid of a deprecated function.

	* ext/dl/handle.c (rb_dlhandle_sym): conditionally used variable.
